WIP pounding it into shape